# nvapi-cli

./: CMakeLists.txt  README.md  build.bat  nvapi-cli.rc
assets/: nvapi.txt  supported_nvapi.txt  unsupported_nvapi.txt
docs/: d3d.md  display.md  dp.md  drs.md  gpu.md  gsync.md  hdmi.md  mosaic.md  ogl.md  pcf.md  sli.md  stereo.md  sys.md  video.md  vr.md
include/: nvapi.h
include/cli/: commands.h  common.h
lib/: nvapi64.lib
src/: nvapi-cli.cpp
src/cli/: commands.h  common.cpp  common.h  d3d.cpp  display_adv.cpp  display_core.cpp  display_custom.cpp  display_dispatch.cpp  display_edid.cpp  display_hdr.cpp  dp.cpp  drs.cpp  gpu_adv.cpp  gpu_client.cpp  gpu_core.cpp  gpu_diag.cpp  gpu_perf.cpp  gpu_powerstate.cpp  gsync.cpp  hdmi.cpp  info.cpp  mosaic.cpp  ogl.cpp  pcf.cpp  sli.cpp  stereo.cpp  sys.cpp  video.cpp  vr.cpp
